2012-11-06  Stephen White  <senorblanco@chromium.org>

        [Chromium] Unreviewed gardening.

        * platform/chromium/TestExpectations:

2012-11-06  Vsevolod Vlasov  <vsevik@chromium.org>

        Web Inspector: Breakpoint is not removed when it was set in non-formatted mode and then removed while in formatted mode.
        https://bugs.webkit.org/show_bug.cgi?id=100595

        Reviewed by Yury Semikhatsky.

        * inspector/debugger/script-formatter-breakpoints-expected.txt:
        * inspector/debugger/script-formatter-breakpoints.html:

2012-11-06  Alexis Menard  <alexis@webkit.org>

        Add an extra test for background-position parsing.
        https://bugs.webkit.org/show_bug.cgi?id=101245

        Reviewed by Eric Seidel.

        This test may overlap some existing tests but they are usually
        old tests where the parsing is tested but mixed with the rendering
        verification, therefore it is not ideal to add new parsing tests.
        This will be useful for the upcoming support of background-position with 4
        values as this test will be extended to verify the parsing and later another
        test/patch will be added to check/support the rendering.

        * fast/backgrounds/background-position-parsing-2-expected.txt: Added.
        * fast/backgrounds/background-position-parsing-2.html: Added.

2012-11-06  Keishi Hattori  <keishi@webkit.org>

        The "Rect" class in WebCore/Resources/pagepopups/pickerCommon.js should be renamed
        https://bugs.webkit.org/show_bug.cgi?id=101304

        Reviewed by Kent Tamura.

        * platform/chromium/fast/forms/page-popup/page-popup-adjust-rect-expected.txt: Replace Rect with Rectangle.
        * platform/chromium/fast/forms/page-popup/page-popup-adjust-rect.html: Ditto.

2012-11-06  Kangil Han  <kangil.han@samsung.com>

        [EFL] Exclude fast/css/style-scoped cases from layout test running
        https://bugs.webkit.org/show_bug.cgi?id=101326
