@@ -1,4 +1,3 @@
-CONSOLE MESSAGE: line 1: Done.
 Tests that there is no javascript error when console evaluation causes resource loading.
 
 Bug 65466
