@@ -18,11 +18,10 @@ var test = function()
 
     function step1()
     {
-        InspectorTest.addConsoleSniffer(step2);
         WebInspector.networkManager.addEventListener(WebInspector.NetworkManager.EventTypes.RequestStarted, onRequest);
         var str = "";
         str += "var s = document.createElement(\"script\");";
-        str += "s.src = \"resources/script.js\";";
+        str += "s.src = \"resources/silent_script.js\";";
         str += "document.head.appendChild(s);";
         WebInspector.runtimeModel.evaluate(str, "console", true, undefined, undefined, undefined, function(){});
     }
@@ -30,13 +29,13 @@ var test = function()
     function onRequest(event)
     {
         var request = event.data;
-        if (/script.js/.test(request.url))
+        if (/silent_script.js/.test(request.url))
             step2();
     }
 
     function step2()
     {
-        if (!findRequestByURL(/script.js/))
+        if (!findRequestByURL(/silent_script.js/))
             return;
 
         WebInspector.panel("network").show();
