@@ -1,0 +1,4 @@
+function foo()
+{
+    return 2 + 2;
+}
