@@ -1,3 +1,15 @@
+2012-11-06  Vsevolod Vlasov  <vsevik@chromium.org>
+
+        Web Inspector: Flakyness in http/tests/inspector/network/network-initiator-from-console.html
+        https://bugs.webkit.org/show_bug.cgi?id=101195
+
+        Unreviewed test flakiness fix.
+
+        * http/tests/inspector/network/network-initiator-from-console-expected.txt:
+        * http/tests/inspector/network/network-initiator-from-console.html:
+        * http/tests/inspector/network/resources/silent_script.js: Added.
+        (foo):
+
 2012-11-06  Stephen White  <senorblanco@chromium.org>
 
         [Chromium] Unreviewed gardening.
